# c-snake-game

./: CMakeLists.txt  README.md
src/: food.c  food.h  main.c  snake.c  snake.h
